# chatzeus

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: django.yml
chat/: admin.py  models.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_aichat_datetime_alter_userchat_datetime.py  0003_chat_remove_userchat_room_delete_aichat_and_more.py
chat/static/chat/js/: appendChat.js  env.js
chat/templates/chat/: base.html  index.html  login.html  room.html
chatzeus/: asgi.py  settings.py  urls.py  wsgi.py
